Correction in the logo alignment

--- a/APPD1001 - Michael Trumbul/Assignment/A3/style.css
+++ b/APPD1001 - Michael Trumbul/Assignment/A3/style.css
@@ -62,5 +62,9 @@ body {
    text-align: justify;
  }
 
+ .logo {
+  text-align: left;
+ }
+
 
  
